--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,31 @@
 {
+  "name": "fryiee/craft-helper",
+  "description": "A composer package to make scaffolding craft fields in migrations less painful.",
+  "version": "1.0.0",
+  "keywords": [
+    "craft",
+    "cms",
+    "craftcms",
+    "matrix",
+    "super table"
+  ],
+  "support": {
+    "email": "hi@craigberry.co",
+    "issues": "https://github.com/fryiee/craft-helper/issues?state=open",
+    "source": "https://github.com/fryiee/craft-helper",
+    "docs": "https://github.com/fryiee/craft-helper"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Craig Berry",
+      "homepage": "http://craigberry.co"
+    },
+    {
+      "name": "Red Tally",
+      "homepage": "https://redtally.com.au"
+    }
+  ],
   "require": {
     "craftcms/cms": "^3.0.0"
   },
@@ -9,13 +36,5 @@
   },
   "config": {
     "optimize-autoloader": true,
-    "platform": {
-      "php": "7.0"
-    }
-  },
-  "scripts": {
-    "post-root-package-install": [
-      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-    ]
   }
 }
